<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context="com.saegil.comivo.Landing.ForgotActivity">
    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="370dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="match_parent"
        android:padding="10dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/signupdone_text_title"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/signupdone_text1"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/signupdone_text2"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="12dp"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/signupdone_text3"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="12dp"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/signupdone_text4"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="12dp"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/signupdone_text5"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="12dp"
            android:layout_alignParentRight="true"/>
        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/large_chechmark"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/donebutton"
            android:text="DONE"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryButtonPressed"/>
    </LinearLayout>
</LinearLayout>