<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context="com.saegil.comivo.Landing.ForgotActivity" >
    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="370dp"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/reset_text_title"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:layout_alignParentRight="true"/>

        <EditText
            android:id="@+id/reset_newpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="@color/edittextdefault"
            android:hint="@string/placeholder_reset_newpassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/reset_confirmpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/edittextdefault"
            android:hint="@string/placeholder_reset_confirmpassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reset_password_button"
            android:layout_marginTop="10dp"
            android:text="@string/change_password_button"
            android:background="@color/colorPrimaryButtonPressed"
            android:textColor="@color/white"/>

    </LinearLayout>
</LinearLayout>