<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context="com.saegil.comivo.Landing.ForgotActivity">
    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="370dp"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/signup_text_title"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:layout_alignParentRight="true"/>

        <EditText
            android:id="@+id/signup_firstname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/edittextdefault"
            android:hint="@string/placeholder_signup_firstname"
            android:padding="10dp"
            android:textSize="13dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/signup_lastname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/edittextdefault"
            android:hint="@string/placeholder_signup_lastname"
            android:padding="10dp"
            android:textSize="13dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/edittextdefault"
            android:hint="@string/placeholder_signup_email"
            android:padding="10dp"
            android:textSize="13dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/signup_confirmemail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/edittextdefault"
            android:hint="@string/placeholder_signup_confirmemail"
            android:padding="10dp"
            android:textSize="13dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/edittextdefault"
            android:hint="@string/placeholder_signup_password"
            android:padding="10dp"
            android:textSize="13dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/signup_confirmpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/edittextdefault"
            android:hint="@string/placeholder_signup_confirmpassword"
            android:padding="10dp"
            android:textSize="13dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/signup_company"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/edittextdefault"
            android:hint="@string/placeholder_signup_company"
            android:padding="10dp"
            android:textSize="13dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_accounttype"
                android:textColor="@color/white"/>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_buyer"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="BUYER"
                    android:textSize="12dp"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_seller"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="SELLER"
                    android:textSize="12dp"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_other"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="OTHER"
                    android:textSize="12dp"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>
        </RelativeLayout>
        <Spinner
            android:id="@+id/signup_businesstype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:spinnerMode="dropdown"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I agree to abide by Comivo LLC's "
                android:textSize="12dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signup_membership_agreement"
                android:text="Membership Agreement"
                android:textSize="12dp"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text=" and "
                android:textColor="#000000"
                android:textSize="12dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signup_privacy_policy"
                android:text="Privacy Policy"
                android:textSize="12dp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:id="@+id/signup_button"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/signup_button_text"
            android:background="@color/colorPrimaryButtonPressed"
            android:textColor="@color/white"/>

    </LinearLayout>
</LinearLayout>